Introduce quinoa.package-manager-install