@@ -1,6 +1,7 @@
 package io.quarkiverse.quinoa.deployment.packagemanager;
 
 import java.util.Collections;
+import java.util.Map;
 
 import io.quarkus.runtime.LaunchMode;
 
@@ -10,8 +11,12 @@ interface PackageManagerCommands {
     String binary();
 
     default Command build(LaunchMode mode) {
-        // MODE=dev/test/normal to be able to build differently depending on the mode
-        return new Command(Collections.singletonMap("MODE", mode.getDefaultProfile()), binary() + " run build");
+        // MODE=dev/test/prod to be able to build differently depending on the mode
+        // NODE_ENV=development/production
+        final Map<String, String> env = Map.of(
+                "MODE", mode.getDefaultProfile(),
+                "NODE_ENV", mode.equals(LaunchMode.DEVELOPMENT) ? "development" : "production");
+        return new Command(env, binary() + " run build");
     }
 
     default Command test() {
